# nonebot_kou

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  nb.sh  nohup.out  pyproject.toml  requirements.txt  tmp.txt
config/: naturel_gpt_config.yml
data/: data.sqlite3  data.sqlite3-shm  data.sqlite3-wal  jrrp.db  lolicon.db  setu_config.json
data/nonebot_plugin_leetcode/html/: bulb-switcher-ii.html  solve-the-equation.html
docker/: docker-compose.yml
src/log/jrrp/: 2022-03-27.json  2022-03-28.json  2022-03-30.json  2022-03-31.json  2022-04-01.json  2022-04-02.json  2022-04-03.json  2022-04-06.json  2022-04-07.json  2022-04-09.json  2022-04-10.json  2022-04-11.json  2022-04-12.json  2022-04-15.json  2022-04-16.json  2022-04-26.json  2022-04-30.json  2022-05-01.json  2022-05-04.json  2022-05-05.json  2022-05-06.json  2022-05-07.json  2022-05-08.json  2022-05-09.json  2022-05-10.json  2022-05-11.json  2022-05-12.json  2022-05-13.json  2022-05-14.json  2022-05-15.json  2022-05-16.json  2022-05-17.json  2022-05-18.json  2022-05-19.json  2022-05-20.json  2022-05-21.json  2022-05-22.json  2022-05-23.json
src/log/py/: 2022-05-21-15-53-59.py  2022-05-22-00-05-59.py  2022-05-22-00-07-14.py  2022-05-22-00-07-45.py  2022-05-23-00-20-49.py
src/plugins/atri/: __init__.py
src/plugins/daily/: __init__.py
src/plugins/jm/: __init__.py
src/plugins/jrrp/: __init__.py
src/plugins/management/: __init__.py  config.json
src/plugins/novelai/: __init__.py
src/plugins/pixiv/: __init__.py
src/plugins/python/: __init__.py
(+6 files in other folders)
